commit with mission and vision

--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@
                     <h1 class="main-heading">WHO WE ARE
                         <!-- <span class="green-dot">.</span> -->
                     </h1>
-                    <p>Sportskin, is a Sportswear revolution shaping its future. We are India's first end-to-end
-                        sportswear consultancy, dedicated to helping brands, manufacturers, and institutions unlock
-                        their potential in the activewear and athleisure space.</p>
+                    <p>Sportskin is India's first end-to-end sportswear consultancy, dedicated to helping brands, manufacturers, athletes and institutions unlock their potential in the activewear and athleisure space.</p>
                     <!-- <div class="quote">
                     "Together, we shape the future of sportswear through design, innovation, sustainability and performance."
                 </div> -->
@@ -98,7 +96,7 @@
 
                 </div>
                 <div class="about-image reveal fade-right">
-                    <img src="images/active wear designing sampling.jpg" alt="About Sportskin">
+                    <img src="images/about.png" alt="About Sportskin">
                 </div>
             </div>
         </div>
