design and buying page

--- a/about.html
+++ b/about.html
@@ -25,15 +25,14 @@
                 <a href="#">Services </a>
                 <div class="mega-dropdown">
                     <div class="dropdown-container">
-                        <a href="#">Design & Sampling</a>
-                        <a href="#">Buying & Sourcing</a>
+                        <a href="design-and-sampling.html">Design & Sampling</a>
+                        <a href="buying-and-sourcing.html">Buying & Sourcing</a>
                         <a href="#">Manufacturing</a>
                         <a href="#">Sportswear Consultancy</a>
+                        <a href="#">Branding & Logos</a>
                     </div>
                 </div>
             </li>
-            
-
             <li class="dropdown-parent">
                 <a href="#">Verticals</a>
                 <div class="mega-dropdown">
@@ -41,7 +40,6 @@
                         <a href="#">Startups</a>
                         <a href="#">Manufacturers & Exporters</a>
                         <a href="#">B2B Brands</a>
-                      
                     </div>
                 </div>
             </li>
