--- a/contact.html
+++ b/contact.html
@@ -22,10 +22,11 @@
                 <a href="#">Services </a>
                 <div class="mega-dropdown">
                     <div class="dropdown-container">
-                        <a href="#">Design & Sampling</a>
-                        <a href="#">Buying & Sourcing</a>
+                        <a href="design-and-sampling.html">Design & Sampling</a>
+                        <a href="buying-and-sourcing.html">Buying & Sourcing</a>
                         <a href="#">Manufacturing</a>
                         <a href="#">Sportswear Consultancy</a>
+                        <a href="#">Branding & Logos</a>
                     </div>
                 </div>
             </li>
