design and buying page

--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
         <div class="contact-container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="contact-tagline">Let's Create Something Amazing Together</h2>
+                    <h2 class="contact-tagline">Let's Create Something Amazing <br/>Together</h2>
                     <h1 class="contact-heading">CONTACT US</h1>
                     <div class="contact-image">
                         <img src="images/logo-symbol-removebg.png" alt="Contact Us Image">
