--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <div class="hero-content">
             <!-- Replace text with logo/image -->
-            <img src="images/logo-symbol-removeb.jpeg" alt="Sportskin Logo" class="hero-logo">
+            <img src="images/logo-symbol-removebg.png" alt="Sportskin Logo" class="hero-logo">
 
             <p class="hero-subtitle">Empowering the Future of Activewear</p>
             <div class="hero-buttons">
